fix(dashboard): show correct link color on mobile header

--- a/dashboard/app/components/layout/Header.module.css
+++ b/dashboard/app/components/layout/Header.module.css
@@ -99,6 +99,7 @@
 .drawer {
 	margin-top: 72px;
 	height: 100%;
+	color: var(--text-light);
 	background-color: var(--bg-dark);
 
 	border-top: 1px solid var(--border-dark);
